--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "add": "^2.0.6",
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.15.0",
+    "moment": "^2.27.0",
     "nuxt": "^2.14.0",
     "yarn": "^1.22.5"
   },
