--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "add": "^2.0.6",
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.15.0",
+    "chart.js": "^2.9.3",
     "moment": "^2.27.0",
     "nuxt": "^2.14.0",
+    "vue-chartjs": "^3.5.1",
     "yarn": "^1.22.5"
   },
   "devDependencies": {}
